# discord-linux-rpc

./: .gitignore  CMakeLists.txt  README.md
examples/send-presence/: send-presence.c
include/: discord_rpc.h
source/: CMakeLists.txt  main.c
